[package]
name = "gramschmidt"
version = "0.4.0"
authors = ["Richard Janis Goldschmidt <janis.beckert@gmail.com>"]
license = "MIT"
description = "Classical, Modified, Reorthogonalized Gram Schmidt Orthogonalization and QR decompostion"
keywords = ["gramschmidt", "qr", "cgs", "mgs", "cgs2"]
categories = ["science", "algorithms"]
repository = "https://github.com/SuperFluffy/gramschmidt-rs"
readme = "README.md"

[dependencies]
ndarray = "0.11"

[dependencies.cblas]
version = "0.1.5"
default-features = false

[dev-dependencies]
lazy_static = "1.0"
ndarray-rand = "0.7"
rand = "0.4"

[dev-dependencies.openblas-src]
version = "0.5.6"
