[package]
name = "gramschmidt"
version = "0.6.0"
edition = "2018"
authors = ["Richard Janis Goldschmidt <janis.beckert@gmail.com>"]
license = "MIT"
description = "Classical, Modified, Reorthogonalized Gram Schmidt Orthogonalization and QR decompostion"
keywords = ["gramschmidt", "qr", "cgs", "mgs", "cgs2"]
categories = ["science", "algorithms"]
repository = "https://github.com/SuperFluffy/gramschmidt-rs"
readme = "README.md"

[dependencies]
cblas = "0.2.0"
ndarray = "0.12.1"

[dev-dependencies]
lazy_static = "1.3.0"
lapacke = "0.2.0"
ndarray-rand = "0.9.0"
openblas-src = "0.7.0"
rand = "0.6.5"
